--- a/docs/cs109a.css
+++ b/docs/cs109a.css
@@ -1,7 +1,7 @@
 /* CS109a.css */
 body {
     background-color: white;
-    font-family: 'Bitter', serif;
+    font-family: 'Cambria', 'Georgia', serif;
     margin-left: .5in;
     margin-right: .5in;
     line-height: 150%;
