--- a/docs/cs109a.css
+++ b/docs/cs109a.css
@@ -23,6 +23,17 @@ div.ournames {
 
 div.summary_table {
     font-family: 'Verdana', sans-serif;
+    font-size: 10pt;
+    margin-left: 5%;
+}
+
+div.summary_table tbody {
+    text-align: right;
+}
+
+div.summary_table tbody th,
+div.summary_table tbody td {
+    padding-right: 1em;
 }
 
 hr {
@@ -43,6 +54,10 @@ table.predictors td:nth-of-type(2) {
     text-align: right;
 }
 
-table.predictors tr:nth-of-type(odd) {
+table tr:nth-of-type(odd) {
     background-color: #d0d0d0;
+}
+
+ul.toc {
+    margin-bottom: 2%;
 }
