--- a/docs/cs109a.css
+++ b/docs/cs109a.css
@@ -49,6 +49,7 @@ img {
 
 table.predictors {
     font-family: 'Courier', 'Courier New', fixed;
+    margin-left: 5%;
 }
 
 table.predictors td:nth-of-type(2) {
