--- a/docs/cs109a.css
+++ b/docs/cs109a.css
@@ -23,7 +23,7 @@ div.ournames {
 
 div.summary_table {
     font-family: 'Verdana', sans-serif;
-    font-size: 10pt;
+    font-size: 1em;
     margin-left: 5%;
 }
 
