--- a/docs/cs109a.css
+++ b/docs/cs109a.css
@@ -24,6 +24,7 @@ div.ournames {
 div.summary_table {
     font-family: 'Verdana', sans-serif;
     font-size: 0.5em;
+    color: red;
     margin-left: 5%;
 }
 
