--- a/docs/cs109a.css
+++ b/docs/cs109a.css
@@ -23,12 +23,16 @@ div.ournames {
 
 div.summary_table {
     font-family: 'Verdana', sans-serif;
-    font-size: 0.5em;
     margin-left: 5%;
 }
 
 div.summary_table tbody {
     text-align: right;
+}
+
+div.summary_table th,
+div.summary_table td {
+    font-size: 0.8em;
 }
 
 div.summary_table tbody th,
