--- a/docs/cs109a.css
+++ b/docs/cs109a.css
@@ -70,7 +70,7 @@ table tr:nth-of-type(odd) {
 }
 
 td.better {
-    background-color: #ffd0d0;
+    background-color: #fff0a0;
     font-weight: bold
 }
 
